# Treinamento-IA-ITAndroids-2018

Climbing Hill/: CMakeLists.txt  Table.cpp  Table.h  main.cpp
Climbing Hill (solved)/: Table.cpp  Table.h  main.cpp
Genetic Algorithm/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Individual.cpp  Individual.h  Population.cpp  Population.h  main.cpp
Genetic algorithm - código pronto/: Algorithm.cpp  Population.cpp  Population.h  main.cpp
MaquinaDeEstadosCompilador/: CMakeLists.txt  StateMachine.cpp  StateMachine.h  code.txt  main.cpp
PSO/: CMakeLists.txt  main.cpp
PotentialField/: CMakeLists.txt  PotentialFieldPlanner.cpp  PotentialFieldPlanner.h  main.cpp
Regressão linear/: gradient.m  gradientDiscent.m
Regressão logística/Lab/mlclass-ex2/: costFunction.m  costFunctionReg.m  ml_login_data.mat  plotData.m  predict.m  sigmoid.m
